--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.4",
-    "next": "12.1.0",
+    "axios": "^0.26.1",
+    "clsx": "^1.1.1",
+    "next": "^12.1.0",
+    "next-videos": "^1.4.0",
     "postcss": "^8.4.12",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "preact": "^10.6.6",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
